--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@ As of some one gently rapping, rapping at my chamber door.
 ``’Tis some visitor," I muttered, ``tapping at my chamber door---
 Only this and nothing more."
 
-Ah, distinctly I remember it was in the bleak December;
+Ah, distinctly I remember it was in the bleak December in the cold winter month;
 And each separate dying ember wrought its ghost upon the floor.
 Eagerly I wished the morrow;---vainly I had sought to borrow
 From my books surcease of sorrow---sorrow for the lost Lenore---
