--- a/main.tex
+++ b/main.tex
@@ -98,7 +98,7 @@ She shall press, ah, nevermore!
 
 Then, methought, the air grew denser, perfumed from an unseen censer
 Swung by Seraphim whose foot-falls tinkled on the tufted floor.
-``Wretch," I cried, ``thy God hath lent thee---by these angels he hath sent thee
+``Wretch," I yelled, ``thy God hath lent thee---by these angels he hath sent thee
 Respite---respite and nepenthe from thy memories of Lenore;
 Quaff, oh quaff this kind nepenthe and forget this lost Lenore!"
 Quoth the Raven ``Nevermore."
